@@ -1,7 +1,7 @@
 # This workflow tests Sqitch's Cockroach engine on all supported versions of
 # Postgres. It runs for pushes and pull requests on the `main`, `develop`,
 # `**cockroach**`, and `**engine**` branches.
-name: 🪳 CockroachDB
+name: 🪳 Cockroach
 on:
   push:
     branches: [main, develop, "**engine**", "**cockroach**" ]
