@@ -376,9 +376,7 @@ FSPEC: {
     my $iswin = App::Sqitch::ISWIN || $^O eq 'cygwin';
     my $fbsql = $tmp->file('fbsql' . ($iswin ? '.exe' : ''));
     $fbsql->touch;
-    diag "Testing $fbsql";
     chmod '0755', $fbsql unless $iswin;
-    local $ENV{FOO} = 1;
 
     my $fs_mock = Test::MockModule->new('File::Spec');
     $fs_mock->mock(path => sub { $tmp });
